# nodeflare

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.yml  fly-builder.toml  fly.api.toml  fly.code-runner.toml  fly.proxy.toml  fly.toml  fly.web.toml
.github/: PULL_REQUEST_TEMPLATE.md
apps/web/: .npmrc  (+8 more)
crates/builder/: Cargo.toml
crates/builder/assets/: stdio-adapter.cjs
crates/builder/src/: docker.rs  flyctl.rs  flyio.rs  main.rs
crates/db/: Cargo.toml
crates/db/src/models/: error_hint.rs  linked_github.rs  mod.rs  oauth.rs  server.rs  server_region.rs  user.rs  user_preferences.rs
crates/db/src/repositories/: api_key_repo.rs  deployment_repo.rs  error_hint_repo.rs  linked_github_repo.rs  mod.rs  oauth_repo.rs  request_log_repo.rs  server_region_repo.rs  server_repo.rs  tool_repo.rs  user_preferences_repo.rs  user_repo.rs  workspace_repo.rs
docker/: Dockerfile.api  Dockerfile.builder  Dockerfile.proxy
docs/: code-execution-mode.md  nodeflare-introduction.md  user-guide.md  youtube-mcp-article.md
migrations/: 20240119000000_add_additional_performance_indexes.sql  20240120000000_add_region_cancel_at.sql  20240121000000_add_team_plan_constraint.sql  20240122000000_add_mcp_path.sql  20240123000000_add_missing_primary_regions.sql  20240124000000_add_transport.sql  20240125000000_add_entry_command.sql  20240126000000_add_oauth.sql  20240127000000_add_oauth_scopes.sql  20240128000000_oauth_dynamic_registration.sql  20240129000000_add_error_hints.sql  20240130000000_add_error_hints_i18n.sql  20240131000000_add_entry_command_required_hint.sql  20240132000000_drop_unused_usage_records.sql  20240133000000_add_security_constraints.sql  20240134000000_add_auth_enabled.sql  20240135000000_add_multi_auth.sql  20240136000000_linked_github_accounts.sql  20240137000000_add_build_command.sql  20240138000000_add_oauth_access_token_ttl.sql  (+10 more)
(+162 files in other folders)
